Fix/insights fe fixes (#396)
* Adjust logo so that BETA label is visible

* Remove width restriction

This was causing whitespace to appear between menu items when there were less items in the menu

* Remove scrollbar from jumplinks; remove scrollbar and fixed height from transcript

* Change newsletter to survey

* Refactor and fix related content explorer display

* Remove height from sidebar navigation to prevent it overlapping with  other grid rows

* Refactor headings implementation

Fix heading styles when JS is disabled; refactor icon approach so that the chevrons display correctly on IE11; fix heading display on small screens when JS is  disabled

* Center align text

Multi-line text was not centered when using justify-content so it has been applied so that multi- and single-line display consistently

* Reinstate hidden scrollbar on jumplinks

--- a/sass/includes/_header.scss
+++ b/sass/includes/_header.scss
@@ -33,11 +33,9 @@
       }
     }
     &-image {
-      width: 6.25rem;
       height: 6.25rem;
 
       @media screen and (max-width: $screen__sm) {
-        width: 4.6875rem;
         height: 4.6875rem;
       }
     }
@@ -62,11 +60,6 @@
       }
 
       height: 100%;
-
-      @media only screen and (min-width: $screen__md) {
-        width: 38rem;
-      }
-
       margin-bottom: 0;
       justify-content: space-around; // IE11 only supports space-around and space-between.
       &-item {
@@ -106,7 +99,7 @@
         &-link {
           display: block;
           color: $color__black;
-          padding: 0.4375rem;
+          padding: 0.4375rem 1rem;
           height: 100%;
           text-decoration: none;
           font-family: $font__supria-sans;
