--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -1,10 +1,16 @@
+
 .jumplinks {
   position: sticky;
   top: 0;
   padding: 2.5rem 0 0 1rem;
   height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: scroll;
+  -ms-overflow-style: none;  /* Hide jumplinks scrollbar on Internet Explorer 10+ and Edge */
+  scrollbar-width: none;  /* Hide jumplinks scrollbar on Firefox */
+
+  &::-webkit-scrollbar { 
+    display: none;  /* Hide jumplinks scrollbar on Safari and Chrome */
+  }
 
   &__heading {
     font-size: 2rem;
