--- a/sass/includes/_media-embed.scss
+++ b/sass/includes/_media-embed.scss
@@ -86,14 +86,6 @@
   &__transcript-text {
     color: $color__white;
     margin-top: 2rem;
-    max-height: 25rem;
-    overflow-y: scroll;
-    overflow-x: hidden;
-
-    &:focus {
-      outline: 0.313rem solid $color__focus-blue-outline-dark-bg;
-      outline-offset: 0.313rem;
-    }
   }
 }
 
